# standardese

./: CMakeLists.txt
src/: CMakeLists.txt
